[feat] modifiers, add characters ui
